# 4_Web_Scraping_Basics

./: actual_forum.json  json_read.py  pyproject.toml  scaping_static_page.py
