[tool.poetry]
name = "3-web-scaping"
version = "0.1.0"
description = ""
authors = ["Pablo1644 <pawel.wagrodzki@gmail,com>"]
readme = "README.md"
packages = [{include = "3_web_scaping"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
